@@ -1,3 +1,8 @@
+2017-06-10  Thomas Koenig  <tkoenig@gcc.gnu.org>
+
+	PR fortran/80988
+	* gfortran.dg/implied_do_io_3.f90:  New test.
+
 2017-06-10  Tom de Vries  <tom@codesourcery.com>
 
 	* lib/target-supports.exp (check_effective_target_signal): New proc.
